fix(): get rid of markdown-nav-window extra scrollbar (#1600)

--- a/src/platform/markdown-navigator/markdown-navigator-window/markdown-navigator-window.component.scss
+++ b/src/platform/markdown-navigator/markdown-navigator-window/markdown-navigator-window.component.scss
@@ -8,6 +8,10 @@
   margin-bottom: 0;
 }
 
+td-markdown-navigator {
+  height: calc(100% - 56px); // account for toolbar height
+}
+
 ::ng-deep {
   .td-draggable-markdown-navigator-window-wrapper {
     > .mat-dialog-container {
